crates/fs-id/tests/compile_fail/unknown_inner_type.rs
use fs_id::fs_id;

#[fs_id]
pub struct Bad(pub String);

fn main() {}
