crates/fs-id/tests/compile_fail/unknown_inner_type.stderr
error: `#[fs_id]` does not recognize inner type `String`. Implement `BrandedInner` (and optionally `BrandedInnerAuto`) for it in `fs-id`, then add it to the allow-list in `fs-id-macros/src/lib.rs`.
 --> tests/compile_fail/unknown_inner_type.rs:4:20
  |
4 | pub struct Bad(pub String);
  |                    ^^^^^^
